applications/compass-ci-api/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: compass-ci-api-ingress
  namespace: compass-ci
spec:
  tls:
    - hosts:
        - api.compass-ci.openeuler.org
      secretName: compass-ci-api-cert-secrets
  rules:
    - host: api.compass-ci.openeuler.org
      http:
        paths:
          - backend:
              serviceName: compass-ci-api-web
              servicePort: 80
            path: /
